--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 #theme                  : "minimal-mistakes-jekyll"
 #remote_theme           : "mmistakes/minimal-mistakes"
 remote_theme: "mmistakes/minimal-mistakes@4.24.0"
-minimal_mistakes_skin    : "neon" #"default"  "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+minimal_mistakes_skin    : "neon" #"default" "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
 locale                   : "en-US"
@@ -23,7 +23,7 @@ subtitle                 : # site tagline that appears below site title in masth
 name                     : "Manas Jyoti Das"
 description              : "A website that share my journey of Bioinformatic and my personal side."
 url                      : "https://das-orky.github.io/"
-baseurl                  : # the subpath of your site, e.g. "/blog"
+baseurl                  : #"das-orky.github.io"
 repository               : "das-orky/das-orky.github.io" 
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : "/assets/images/logo.png"
@@ -291,6 +291,13 @@ defaults:
       layout: single
       author_profile: true
       read_time: true
-      comments:  #true
+      comments: #true
       share: true
       related: true
+  # _pages
+  - scope:
+      path: "_pages"
+      type: pages
+    values:
+      layout: single
+      author_profile: true
