--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,28 +1,44 @@
 # main links
 main:
   - title: "About Me"
-    url: https://www.github.com/
+    url: "/"
   - title: "Genomics Posts"
     url: "/gene/"
   - title: "Projects"
     url: "/project_home/"
   - title: "Book Collections"
-    url: "/book_collection/"
+    url: "/book_collection_gallery/"
+  - title: "Home"
+    url: "/"
 
-foo:
-  - title: Getting Started
+foo_book:
+  - title: Site Navigation
     children:
-      - title: "Quick-Start Guide"
-        url: "/genomics/genomics_posts_1"
-      - title: "Structure"
-        url: "/genomics/genomics_posts_1"
-      - title: "Installation"
-        url: "/genomics/genomics_posts_1"
-      - title: "Upgrading"
-        url: "/genomics/genomics_posts_1"
-  - title: Customization
+      - title: "Home"
+        url: "/"
+      - title: "About Me"
+        url: "/"
+      - title: "Genomic Posts"
+        url: "/gene/"
+      - title: "Projects"
+        url: "/project_home/"
+  - title: Go To
     children:
-      - title: "Configuration"
-        url: "/genomics/genomics_posts_1"
-      - title: "Overriding Theme Defaults"
-        url: "/genomics/genomics_posts_1"
+      - title: "Top"
+        url: "/book_collection_gallery/"
+
+foo_project:
+  - title: Site Navigation
+    children:
+      - title: "Home"
+        url: "/"
+      - title: "About Me"
+        url: "/"
+      - title: "Genomic Posts"
+        url: "/gene/"
+      - title: "Book Collection"
+        url: "/book_collection_gallery/"
+  - title: Go To
+    children:
+      - title: "Top"
+        url: "/project_home/"
