--- a/_config.yml
+++ b/_config.yml
@@ -113,7 +113,7 @@ author:
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      url: "mailto:manas.ork at google mail"
+      url: "mailto:manas.ork at gmail dot com"
     - label: "Website"
       icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
